kube/app-deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  selector:
    matchLabels:
      app: pennlabs
  replicas: 1
  template:
    metadata:
      labels:
        app: pennlabs
    spec:
      containers:
      - name: app
        image: williamgoeller/pennlabs_devops_challenge:latest
        ports:
          - containerPort: 5000
            name: http
