kube/redis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app: pennlabs
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: pennlabs
        tier: backend
        track: stable
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - name: http
              containerPort: 6379
