kube/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: pennlabs
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 5000
  type: LoadBalancer
