kube/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: pennlabs
  ports:
  - port: 6379
    targetPort: 0
  type: ClusterIP
