kube/app-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
  - host: bennbabs.williamgoeller.com
    http:
      paths:
      - backend:
          serviceName: app
          servicePort: 80
